Media module sample

--- a/samples/src/main/res/layout/activity_media_sample.xml
+++ b/samples/src/main/res/layout/activity_media_sample.xml
@@ -2,12 +2,16 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
+	android:layout_height="match_parent"
 	android:orientation="vertical">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/app_name" />
+	<include layout="@layout/toolbar" />
+
+	<fragment
+		android:id="@+id/fragment_media_sample"
+		android:name="org.alfonz.samples.alfonzmedia.MediaSampleFragment"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="1" />
 
 </LinearLayout>
