--- a/samples/src/main/res/layout/fragment_rx_sample.xml
+++ b/samples/src/main/res/layout/fragment_rx_sample.xml
@@ -41,6 +41,7 @@
 			<TextView
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				android:layout_marginTop="@dimen/global_spacing_16"
 				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
 				android:text="@{viewModel.log}" />
 
