--- a/samples/src/main/res/layout/placeholder_offline.xml
+++ b/samples/src/main/res/layout/placeholder_offline.xml
@@ -8,7 +8,7 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:orientation="vertical"
 		android:gravity="center"
 		android:padding="@dimen/global_keyline_16">
