--- a/samples/src/main/res/layout/fragment_view_sample.xml
+++ b/samples/src/main/res/layout/fragment_view_sample.xml
@@ -17,7 +17,8 @@
 		app:progressLayout="@layout/placeholder_progress"
 		app:offlineLayout="@layout/placeholder_offline"
 		app:emptyLayout="@layout/placeholder_empty"
-		app:state="@{viewModel.state}">
+		app:state="@{viewModel.state}"
+		app:invisibleWhenHidden="false">
 
 		<org.alfonz.view.ObservableScrollView
 			android:id="@+id/fragment_view_sample_scrollview"
