New arch module

--- a/samples/src/main/res/layout/activity_samples.xml
+++ b/samples/src/main/res/layout/activity_samples.xml
@@ -24,18 +24,18 @@
 				android:text="@string/title_adapter" />
 
 			<Button
+				android:id="@+id/activity_samples_arch"
+				android:layout_width="0dp"
+				android:layout_height="@dimen/global_spacing_128"
+				android:layout_weight="1"
+				android:text="@string/title_arch" />
+
+			<Button
 				android:id="@+id/activity_samples_graphics"
 				android:layout_width="0dp"
 				android:layout_height="@dimen/global_spacing_128"
 				android:layout_weight="1"
 				android:text="@string/title_graphics" />
-
-			<Button
-				android:id="@+id/activity_samples_media"
-				android:layout_width="0dp"
-				android:layout_height="@dimen/global_spacing_128"
-				android:layout_weight="1"
-				android:text="@string/title_media" />
 
 		</LinearLayout>
 
@@ -43,6 +43,13 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal">
+
+			<Button
+				android:id="@+id/activity_samples_media"
+				android:layout_width="0dp"
+				android:layout_height="@dimen/global_spacing_128"
+				android:layout_weight="1"
+				android:text="@string/title_media" />
 
 			<Button
 				android:id="@+id/activity_samples_mvvm"
@@ -58,19 +65,19 @@
 				android:layout_weight="1"
 				android:text="@string/title_rest" />
 
-			<Button
-				android:id="@+id/activity_samples_rx"
-				android:layout_width="0dp"
-				android:layout_height="@dimen/global_spacing_128"
-				android:layout_weight="1"
-				android:text="@string/title_rx" />
-
 		</LinearLayout>
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal">
+
+			<Button
+				android:id="@+id/activity_samples_rx"
+				android:layout_width="0dp"
+				android:layout_height="@dimen/global_spacing_128"
+				android:layout_weight="1"
+				android:text="@string/title_rx" />
 
 			<Button
 				android:id="@+id/activity_samples_utility"
@@ -85,11 +92,6 @@
 				android:layout_height="@dimen/global_spacing_128"
 				android:layout_weight="1"
 				android:text="@string/title_view" />
-
-			<Space
-				android:layout_width="0dp"
-				android:layout_height="@dimen/global_spacing_128"
-				android:layout_weight="1" />
 
 		</LinearLayout>
 	</LinearLayout>
