--- a/samples/src/main/res/layout/fragment_graphics_sample.xml
+++ b/samples/src/main/res/layout/fragment_graphics_sample.xml
@@ -60,6 +60,14 @@
 				android:adjustViewBounds="true"
 				android:scaleType="fitCenter" />
 
+			<ImageView
+				android:id="@+id/fragment_graphics_sample_image_placeholder"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="@dimen/global_spacing_16"
+				android:adjustViewBounds="true"
+				android:scaleType="fitCenter" />
+
 		</LinearLayout>
 	</ScrollView>
 
