--- a/samples/src/main/res/menu/activity_adapter_sample.xml
+++ b/samples/src/main/res/menu/activity_adapter_sample.xml
@@ -10,14 +10,20 @@
 		app:showAsAction="never" />
 
 	<item
-		android:id="@+id/menu_activity_adapter_sample_grid_simple"
-		android:title="@string/menu_activity_adapter_sample_grid_simple"
+		android:id="@+id/menu_activity_adapter_sample_list_multi"
+		android:title="@string/menu_activity_adapter_sample_list_multi"
 		android:icon="@null"
 		app:showAsAction="never" />
 
 	<item
-		android:id="@+id/menu_activity_adapter_sample_list_multi"
-		android:title="@string/menu_activity_adapter_sample_list_multi"
+		android:id="@+id/menu_activity_adapter_sample_list_diff"
+		android:title="@string/menu_activity_adapter_sample_list_diff"
+		android:icon="@null"
+		app:showAsAction="never" />
+
+	<item
+		android:id="@+id/menu_activity_adapter_sample_grid_simple"
+		android:title="@string/menu_activity_adapter_sample_grid_simple"
 		android:icon="@null"
 		app:showAsAction="never" />
 
