--- a/samples/src/main/res/layout/fragment_utility_sample.xml
+++ b/samples/src/main/res/layout/fragment_utility_sample.xml
@@ -23,7 +23,8 @@
 			<EditText
 				android:id="@+id/fragment_utility_sample_edittext"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content" />
+				android:layout_height="wrap_content"
+				android:inputType="text" />
 
 			<Button
 				android:layout_width="match_parent"
