Use FragmentContainerView for hosting Fragment in layout

--- a/samples/src/main/res/layout/activity_arch_sample.xml
+++ b/samples/src/main/res/layout/activity_arch_sample.xml
@@ -7,7 +7,7 @@
 
 	<include layout="@layout/toolbar" />
 
-	<fragment
+	<androidx.fragment.app.FragmentContainerView
 		android:id="@+id/fragment_arch_sample"
 		android:name="org.alfonz.samples.alfonzarch.ArchSampleFragment"
 		android:layout_width="match_parent"
