--- a/samples/src/main/res/layout/activity_rx_sample.xml
+++ b/samples/src/main/res/layout/activity_rx_sample.xml
@@ -7,7 +7,7 @@
 
 	<include layout="@layout/toolbar" />
 
-	<fragment
+	<androidx.fragment.app.FragmentContainerView
 		android:id="@+id/fragment_rx_sample"
 		android:name="org.alfonz.samples.alfonzrx.RxSampleFragment"
 		android:layout_width="match_parent"
